[gd_scene load_steps=2 format=3 uid="uid://dyywp583ng84c"]

[ext_resource type="Script" uid="uid://b8oorikw5qr0e" path="res://entities/ui/hud/hud.gd" id="1_ahhtf"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahhtf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Time: 01:30"

[node name="PassengerInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Passenger: None"

[node name="DestinationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Destination: None"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score: $0"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -22.5
offset_right = 110.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Final Score: $0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart Game"

[node name="StartGamePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartGamePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -22.5
offset_right = 110.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="FinalScoreLabel" type="Label" parent="StartGamePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Crazy Taxi"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="StartGamePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start Game"
